--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,9 +1,8 @@
-.header {
-    margin: 28px 0 56px 0;
-    padding: 0 48px;
+.footer {
+    margin: 92px 0 24px 0;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     width: 100%;
     box-sizing: border-box;
+    padding: 0 48px;
 }
