--- a/style.css
+++ b/style.css
@@ -1,4 +1,84 @@
 body {
     background: #2A2C2F;
-    ;
 }
+
+
+/* @media screen and (max-width:1279px) and (min-width:1024px) {
+    .lead {
+        max-width: 928px;
+        min-height: 580px;
+    }
+}
+
+@media screen and (max-width:1279px) and (min-width:1024px) {
+    .place__image {
+        width: 440px;
+        height: 440px;
+    }
+}
+
+@media screen and (max-width:1279px) and (min-width:1024px) {
+    .cover__background {
+        width: 1024px;
+        min-height: 640px;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width:1279px) and (min-width:1024px) {
+    .photo-grid {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
+} */
+
+
+/* 768 - 1024  */
+
+
+/* @media screen and (max-width:1023px) and (min-width:768px) {
+    .lead {
+        max-width: 768px;
+        min-height: 480px;
+    }
+} */
+
+
+/* @media screen and (max-width:1023px) and (min-width:768px) {
+    .intro {
+        width: 720px;
+    }
+    .intro__title {
+        width: 720px;
+    }
+    .intro__list {
+        width: 720px;
+    }
+} */
+
+
+/* @media screen and (max-width:1023px) and (min-width:768px) {
+    .place__image {
+        width: 330px;
+        height: 340px;
+    }
+}
+
+@media screen and (max-width:1023px) and (min-width:768px) {
+    .cover__background {
+        width: 768px;
+        height: 480px;
+    }
+}
+
+@media screen and (max-width:1023px) and (min-width:768px) {
+    .photo-grid {
+        grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
+    }
+} */
+
+
+/* @media screen and (max-width:1023px) and (min-width:768px) {
+    .intro__text {
+        width: 720px;
+    }
+} */
