--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -34,5 +34,22 @@
 @media screen and (max-width:1279px) and (min-width:1024px) {
     .cover__background {
         width: 1024px;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width:1023px) and (min-width:768px) {
+    .cover__background {
+        padding: 0;
+        width: 768px;
+        min-height: 480px;
+    }
+}
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .cover__background {
+        width: 320px;
+        min-height: 200px;
+        padding: 0;
     }
 }
