--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -8,3 +8,10 @@
     color: #fff;
     z-index: 1;
 }
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .cover__subtitle {
+        font-size: 14px;
+        line-height: 16px;
+    }
+}
