--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,3 +7,10 @@
     margin: 0 0 32px 0;
     z-index: 1;
 }
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .cover__title {
+        font-size: 32px;
+        line-height: 109%;
+    }
+}
