--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,3 +3,9 @@
     font-weight: 400;
     line-height: 16px;
 }
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .footer__copyright {
+        margin-top: 48px;
+    }
+}
