--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,3 +6,11 @@
     box-sizing: border-box;
     padding: 0 48px;
 }
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .footer {
+        display: flex;
+        flex-direction: column;
+        padding: 0 16px;
+    }
+}
