--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -12,3 +12,10 @@
     margin-right: 18px;
     text-decoration: underline;
 }
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .header__lang-link {
+        font-size: 18px;
+        line-height: 111%;
+    }
+}
