--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,3 +7,22 @@
     width: 100%;
     box-sizing: border-box;
 }
+
+@media screen and (max-width:1279px) and (min-width:1024px) {
+    .header {
+        margin: 28px 0 48px 0;
+    }
+}
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .header {
+        padding: 0 16px;
+        margin: 28px 0 48px 0;
+    }
+}
+
+@media screen and (max-width:1023px) and (min-width:768px) {
+    .header {
+        margin: 28px 0 48px 0;
+    }
+}
