--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,5 +2,12 @@
     font-weight: 900;
     font-size: 54px;
     line-height: 107%;
-    margin-bottom: 40px;
+    margin: 0;
+}
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .intro__title {
+        font-size: 32px;
+        line-height: 109%;
+    }
 }
