--- a/blocks/intro/into.css
+++ b/blocks/intro/into.css
@@ -3,10 +3,23 @@
     display: flex;
     flex-direction: column;
     width: 984px;
+    margin-top: 92px;
 }
 
 @media screen and (max-width:1279px) and (min-width:1024px) {
     .intro {
         width: 928px;
+    }
+}
+
+@media screen and (max-width:1023px) and (min-width:768px) {
+    .intro {
+        width: 720px;
+    }
+}
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .intro {
+        width: 288px;
     }
 }
