--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,20 @@
 .lead__caption {
     width: 100%;
-    line-height: 14px;
+    line-height: 140%;
     margin-top: 8px;
+    font-size: 10px;
+    font-weight: 400;
+    letter-spacing: 1.5px;
+}
+
+@media screen and (max-width:1023px) and (min-width:768px) {
+    .lead__caption {
+        margin-left: 24px;
+    }
+}
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .lead__caption {
+        margin-left: 16px;
+    }
 }
