--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,9 +1,16 @@
 .lead__title {
     margin: 0 auto 32px auto;
     max-width: 720px;
-    min-height: 200px;
     font-size: 96px;
     line-height: 100px;
     text-align: center;
     font-family: 'inter';
+}
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .lead__title {
+        font-size: 40px;
+        line-height: 110%;
+        margin: 0 auto 16px auto;
+    }
 }
