--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -2,3 +2,10 @@
     max-width: 176px;
     min-height: 52px;
 }
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .logo {
+        width: 142px;
+        height: 42px;
+    }
+}
