--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,3 +7,16 @@
     gap: 16px 16px;
     margin-top: 92px;
 }
+
+@media screen and (max-width:1023px) and (min-width:768px) {
+    .photo-grid {
+        padding: 0 24px;
+    }
+}
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .photo-grid {
+        padding: 0 16px;
+        gap: 12px 0;
+    }
+}
