--- a/blocks/places/place/__paragraph/place__paragraph.css
+++ b/blocks/places/place/__paragraph/place__paragraph.css
@@ -12,3 +12,16 @@
         width: 456px;
     }
 }
+
+@media screen and (max-width:1023px) and (min-width:768px) {
+    .place__paragraph {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .place__paragraph {
+        width: 288px;
+        font-size: 16px;
+    }
+}
