--- a/blocks/places/place/__title/place__title.css
+++ b/blocks/places/place/__title/place__title.css
@@ -7,3 +7,16 @@
     font-family: 'Inter';
     font-weight: 900;
 }
+
+@media screen and (max-width:1023px) and (min-width:768px) {
+    .place__title {
+        font-size: 42px;
+    }
+}
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .place__title {
+        font-size: 32px;
+        line-height: 109%;
+    }
+}
