--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -4,3 +4,24 @@
     gap: 48px 40px;
     margin-bottom: 92px;
 }
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .place {
+        grid-template-areas: "title" "website" "image" "paragraph";
+        gap: 32px 0;
+        margin: 0 16px;
+    }
+}
+
+@media screen and (max-width:1279px) and (min-width:1024px) {
+    .place {
+        gap: 48px 32px;
+    }
+}
+
+@media screen and (max-width:1023px) and (min-width:768px) {
+    .place {
+        gap: 48px 28px;
+        grid-template-columns: 340px 352px;
+    }
+}
