--- a/pages/page.css
+++ b/pages/page.css
@@ -32,3 +32,5 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__link-item/footer__link-item.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/places/place/__website/__url-heading/place__website__url-heading.css);
+@import url(../blocks/footer/__link/footer__link.css);
