--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,11 +1,12 @@
 .footer__copyright {
     font-size: 14px;
     font-weight: 400;
-    line-height: 16px;
+    line-height: 114%;
 }
 
 @media screen and (max-width:767px) and (min-width:320px) {
     .footer__copyright {
         margin-top: 48px;
+        line-height: 100%;
     }
 }
