--- a/blocks/footer/__link-item/footer__link-item.css
+++ b/blocks/footer/__link-item/footer__link-item.css
@@ -3,10 +3,17 @@
     color: #fff;
     font-size: 16px;
     font-weight: 400;
-    line-height: 16px;
+    line-height: 112%;
     margin-right: 18px;
 }
 
 .footer__link_item:last-child {
     margin: 0;
+}
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .footer__link-item {
+        font-size: 24px;
+        line-height: 100%;
+    }
 }
