--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -3,6 +3,7 @@
     grid-template-areas: "title website " "image paragraph";
     gap: 48px 40px;
     margin-bottom: 92px;
+    grid-template-columns: 460px 484px;
 }
 
 @media screen and (max-width:767px) and (min-width:320px) {
@@ -10,12 +11,14 @@
         grid-template-areas: "title" "website" "image" "paragraph";
         gap: 32px 0;
         margin: 0 16px;
+        grid-template-columns: 320px;
     }
 }
 
 @media screen and (max-width:1279px) and (min-width:1024px) {
     .place {
         gap: 48px 32px;
+        grid-template-columns: 440px 456px;
     }
 }
 
