--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -33,6 +33,7 @@
 
 @media screen and (max-width:1279px) and (min-width:1024px) {
     .cover__background {
+        min-height: 640px;
         width: 1024px;
         padding: 0;
     }
