--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,3 +1,10 @@
+.footer__link {
+    margin: 0;
+    display: flex;
+    list-style: none;
+    padding: 0;
+}
+
 @media screen and (max-width:767px) and (min-width:320px) {
     .footer__link {
         display: flex;
