--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,6 +7,12 @@
     padding: 0 48px;
 }
 
+@media screen and (max-width:1023px) and (min-width:768px) {
+    .footer {
+        padding: 0 24px;
+    }
+}
+
 @media screen and (max-width:767px) and (min-width:320px) {
     .footer {
         display: flex;
