--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -24,5 +24,6 @@
 @media screen and (max-width:1023px) and (min-width:768px) {
     .header {
         margin: 28px 0 48px 0;
+        padding: 0 24px;
     }
 }
