--- a/blocks/wrapper/wrapper.css
+++ b/blocks/wrapper/wrapper.css
@@ -1,8 +1,12 @@
-.page {
+.wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0;
     color: #fff;
     font-family: 'inter';
+}
+
+figure {
+    margin: 0;
 }
