--- a/pages/page.css
+++ b/pages/page.css
@@ -1,13 +1,16 @@
 @import url(../vendor/normalize.css);
 @import url(../style.css);
+@import url(../vendor/fonts.css);
+@import url(../blocks/wrapper/wrapper.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/header/__lang-link/_underline/header__lang-link_underline.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
-@import url(../vendor/fonts.css);
+@import url(../blocks/lead/__signature/lead__signature.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/intro/into.css);
 @import url(../blocks/intro/__title/intro__title.css);
