--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -6,3 +6,15 @@
     box-sizing: border-box;
     margin-top: 92px;
 }
+
+@media screen and (max-width:1023px) and (min-width:768px) {
+    .places {
+        margin-top: 88px;
+    }
+}
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .places {
+        margin-top: 64px;
+    }
+}
