--- a/style/index.css
+++ b/style/index.css
@@ -1,7 +1,7 @@
 @import url(../vendor/normalize.css);
-@import url(../style.css);
+@import url(../style/style.css);
 @import url(../vendor/fonts.css);
-@import url(./pages/page.css);
+@import url(../pages/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
@@ -25,15 +25,15 @@
 @import url(../blocks/places/place/place.css);
 @import url(../blocks/places/place/__title/place__title.css);
 @import url(../blocks/places/place/__image/place__image.css);
+@import url(../blocks/places/place/__url-heading/place__url-heading.css);
 @import url(../blocks/places/place/__paragraph/place__paragraph.css);
 @import url(../blocks/places/place/__website/place__website.css);
 @import url(../blocks/places/place/__text/place__text.css);
-@import url(../blocks/places/place/__website/_link/place__website_link.css);
+@import url(../blocks/places/place/__link/place__link.css);
 @import url(../blocks/cover/__background/cover__background.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__link-item/footer__link-item.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
-@import url(../blocks/places/place/__website/__url-heading/place__website_url-heading.css);
 @import url(../blocks/footer/__link/footer__link.css);
