--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,7 +2,7 @@
     margin: 92px 0 24px 0;
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 1184px;
     box-sizing: border-box;
     padding: 0 48px;
 }
