--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,15 +1,10 @@
 .header__lang-link {
     text-decoration: none;
-    max-width: 29px;
     font-size: 24px;
-    line-height: 28px;
+    line-height: 117%;
+    font-weight: 400;
     color: #fff;
-    font-family: 'Inter';
-    font-style: normal;
-}
-
-.header__lang-link:nth-child(1) {
-    margin-right: 18px;
+    margin: 0;
 }
 
 @media screen and (max-width:767px) and (min-width:320px) {
