--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,6 +4,7 @@
     font-size: 30px;
     line-height: 120%;
     text-align: center;
+    font-weight: 400;
 }
 
 @media screen and (max-width:1279px) and (min-width:1024px) {
@@ -17,7 +18,6 @@
         font-size: 16px;
         line-height: 125%;
         margin: 0 auto 40px auto;
-        width: 288px;
     }
 }
 
