--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -17,7 +17,13 @@
 @media screen and (max-width:1023px) and (min-width:768px) {
     .lead {
         max-width: 768px;
-        min-height: 480px;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .lead {
+        max-width: 320px;
         margin: 0;
     }
 }
