--- a/pages/page.css
+++ b/pages/page.css
@@ -1,12 +1,9 @@
 .page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin: 0;
     color: #fff;
-    font-family: 'inter';
+    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
 }
 
-figure {
+.illustration {
     margin: 0;
 }
