--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -11,8 +11,6 @@
     margin: 0;
     color: #fff;
     position: relative;
-    box-sizing: border-box;
-    padding: 0 48px;
 }
 
 .cover__background::before {
@@ -49,8 +47,7 @@
 
 @media screen and (max-width:767px) and (min-width:320px) {
     .cover__background {
-        width: 320px;
+        max-width: 320px;
         min-height: 200px;
-        padding: 0;
     }
 }
