--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,7 +5,7 @@
     line-height: 106%;
     text-align: center;
     text-decoration: none;
-    margin: 0 0 32px 0;
+    margin-bottom: 32px;
     z-index: 1;
 }
 
@@ -14,5 +14,6 @@
         font-size: 32px;
         line-height: 109%;
         width: 288px;
+        margin-bottom: 16px;
     }
 }
