--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,15 +1,21 @@
 .footer {
-    margin: 92px 0 24px 0;
+    margin: 92px auto 0 auto;
     display: flex;
     justify-content: space-between;
-    width: 1184px;
-    box-sizing: border-box;
-    padding: 0 48px;
+    max-width: 1184px;
+    align-items: center;
+}
+
+@media screen and (max-width:1279px) and (min-width:1024px) {
+    .footer {
+        max-width: 928px;
+    }
 }
 
 @media screen and (max-width:1023px) and (min-width:768px) {
     .footer {
-        padding: 0 24px;
+        margin: 88px auto 0 auto;
+        max-width: 720px;
     }
 }
 
@@ -17,6 +23,7 @@
     .footer {
         display: flex;
         flex-direction: column;
-        padding: 0 16px;
+        align-items: flex-start;
+        margin: 64px 0 0 16px;
     }
 }
