--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,30 +1,28 @@
 .header {
     max-width: 1184px;
-    margin: 28px auto 56px auto;
-    /* padding: 0 48px; */
+    margin: 0 auto 56px auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* box-sizing: border-box; */
 }
 
 @media screen and (max-width:1279px) and (min-width:1024px) {
     .header {
-        margin: 28px auto 48px auto;
+        margin: 0 auto 48px auto;
         max-width: 928px;
-    }
-}
-
-@media screen and (max-width:767px) and (min-width:320px) {
-    .header {
-        padding: 0 16px;
-        margin: 16px auto 48px auto;
     }
 }
 
 @media screen and (max-width:1023px) and (min-width:768px) {
     .header {
-        margin: 28px 0 48px 0;
-        padding: 0 24px;
+        margin: 0 auto 48px auto;
+        max-width: 720px;
+    }
+}
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .header {
+        max-width: 288px;
+        margin: 0 auto 48px auto;
     }
 }
