--- a/blocks/intro/into.css
+++ b/blocks/intro/into.css
@@ -21,5 +21,6 @@
 @media screen and (max-width:767px) and (min-width:320px) {
     .intro {
         width: 288px;
+        margin-top: 64px;
     }
 }
