--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -11,6 +11,6 @@
     .lead__title {
         font-size: 40px;
         line-height: 110%;
-        margin: 0 auto 16px auto;
+        margin-bottom: 16px;
     }
 }
