--- a/blocks/places/place/__paragraph/place__paragraph.css
+++ b/blocks/places/place/__paragraph/place__paragraph.css
@@ -14,5 +14,6 @@
 @media screen and (max-width:767px) and (min-width:320px) {
     .place__paragraph {
         font-size: 16px;
+        margin: 0 16px;
     }
 }
