--- a/blocks/places/place/__website/place__website.css
+++ b/blocks/places/place/__website/place__website.css
@@ -5,3 +5,9 @@
     justify-content: flex-end;
     align-items: flex-start;
 }
+
+@media screen and (max-width:767px) and (min-width:320px) {
+    .place__website {
+        margin: 0 16px;
+    }
+}
