--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -16,5 +16,6 @@
 @media screen and (max-width:767px) and (min-width:320px) {
     .places {
         margin-top: 64px;
+        max-width: 320px;
     }
 }
