--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,7 @@
 @import url(../vendor/normalize.css);
 @import url(../style/style.css);
 @import url(../vendor/fonts.css);
-@import url(../pages/page.css);
+@import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
@@ -14,6 +14,7 @@
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__signature/lead__signature.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
+@import url(../blocks/lead/__illustration/lead__illustration.css);
 @import url(../blocks/intro/into.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__subtitle/intro__subtitle.css);
