--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -1,4 +1,4 @@
-.place__paragraph {
+.places__paragraph {
     font-size: 18px;
     line-height: 163%;
     grid-area: paragraph;
@@ -6,13 +6,13 @@
 }
 
 @media screen and (max-width:1023px) and (min-width:768px) {
-    .place__paragraph {
+    .places__paragraph {
         font-size: 16px;
     }
 }
 
 @media screen and (max-width:767px) and (min-width:320px) {
-    .place__paragraph {
+    .places__paragraph {
         font-size: 16px;
         margin: 0 16px;
     }
