--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -1,4 +1,4 @@
-.place {
+.places__place {
     display: grid;
     grid-template-areas: "title website " "image paragraph";
     gap: 48px 40px;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width:767px) and (min-width:320px) {
-    .place {
+    .places__place {
         grid-template-areas: "title" "website" "image" "paragraph";
         gap: 32px 0;
         margin: 0 16px;
@@ -16,14 +16,14 @@
 }
 
 @media screen and (max-width:1279px) and (min-width:1024px) {
-    .place {
+    .places__place {
         gap: 48px 32px;
         grid-template-columns: 440px 456px;
     }
 }
 
 @media screen and (max-width:1023px) and (min-width:768px) {
-    .place {
+    .places__place {
         gap: 48px 28px;
         grid-template-columns: 340px 352px;
     }
