--- a/blocks/places/__text/places__text.css
+++ b/blocks/places/__text/places__text.css
@@ -1,10 +1,10 @@
-.place__text {
+.places__text {
     margin: 0;
     font-weight: 400;
     font-size: 18px;
     line-height: 163%;
 }
 
-.place__text:first-child {
+.places__text:first-child {
     margin-bottom: 26px;
 }
