--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,4 +1,4 @@
-.place__title {
+.places__title {
     font-size: 54px;
     line-height: 107%;
     grid-area: title;
@@ -7,13 +7,13 @@
 }
 
 @media screen and (max-width:1023px) and (min-width:768px) {
-    .place__title {
+    .places__title {
         font-size: 42px;
     }
 }
 
 @media screen and (max-width:767px) and (min-width:320px) {
-    .place__title {
+    .places__title {
         font-size: 32px;
         line-height: 109%;
         margin: 50px 16px 0 16px;
