--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,6 +1,6 @@
-.cover__background {
+.cover__link {
     background-image: url(../../../images/__background.jpg);
-    width: 1184px;
+    max-width: 1184px;
     min-height: 740px;
     display: flex;
     background-size: cover;
@@ -13,7 +13,7 @@
     position: relative;
 }
 
-.cover__background::before {
+.cover__link::before {
     content: '';
     position: absolute;
     top: 0;
@@ -25,29 +25,24 @@
     transition: opacity 1s;
 }
 
-.cover__background:hover::before {
+.cover__link:hover::before {
     opacity: 0.8;
 }
 
 @media screen and (max-width:1279px) and (min-width:1024px) {
-    .cover__background {
+    .cover__link {
         min-height: 640px;
-        width: 1024px;
-        padding: 0;
     }
 }
 
 @media screen and (max-width:1023px) and (min-width:768px) {
-    .cover__background {
-        padding: 0;
-        width: 768px;
+    .cover__link {
         min-height: 480px;
     }
 }
 
 @media screen and (max-width:767px) and (min-width:320px) {
-    .cover__background {
-        max-width: 320px;
+    .cover__link {
         min-height: 200px;
     }
 }
