--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,7 +5,7 @@
     line-height: 106%;
     text-align: center;
     text-decoration: none;
-    margin-bottom: 32px;
+    margin: 0 0 32px 0;
     z-index: 1;
 }
 
@@ -14,6 +14,6 @@
         font-size: 32px;
         line-height: 109%;
         width: 288px;
-        margin-bottom: 16px;
+        margin: 0 0 16px 0;
     }
 }
