--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,11 +2,12 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 114%;
+    margin: 0;
 }
 
 @media screen and (max-width:767px) and (min-width:320px) {
     .footer__copyright {
-        margin-top: 48px;
+        margin: 48px 0 0 16px;
         line-height: 100%;
     }
 }
