--- a/blocks/footer/__link-item/footer__link-item.css
+++ b/blocks/footer/__link-item/footer__link-item.css
@@ -4,7 +4,13 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 112%;
-    margin-right: 18px;
+    margin-right: 19px;
+    opacity: 1;
+    transition: 0.3s ease-in-out;
+}
+
+.footer__link-item:hover {
+    opacity: 0.2;
 }
 
 .footer__link_item:last-child {
