--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,8 +7,8 @@
 
 @media screen and (max-width:767px) and (min-width:320px) {
     .footer__link {
-        display: flex;
         flex-direction: column;
         gap: 32px 0;
+        margin-left: 16px;
     }
 }
