--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -21,9 +21,9 @@
 
 @media screen and (max-width:767px) and (min-width:320px) {
     .footer {
-        display: flex;
         flex-direction: column;
         align-items: flex-start;
-        margin: 64px 0 0 16px;
+        margin: 64px auto 0 auto;
+        max-width: 320px;
     }
 }
