--- a/blocks/intro/into.css
+++ b/blocks/intro/into.css
@@ -15,6 +15,7 @@
 @media screen and (max-width:1023px) and (min-width:768px) {
     .intro {
         width: 720px;
+        margin-top: 88px;
     }
 }
 
