--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,6 +4,7 @@
     font-size: 10px;
     font-weight: 400;
     letter-spacing: 1.5px;
+    text-transform: uppercase;
 }
 
 @media screen and (max-width:1023px) and (min-width:768px) {
