--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,5 @@
 .photo-grid {
-    width: 1184px;
+    max-width: 1184px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
     gap: 16px 16px;
@@ -8,14 +8,13 @@
 
 @media screen and (max-width:1023px) and (min-width:768px) {
     .photo-grid {
-        grid-template-columns: repeat(auto-fit, minmax(352px));
         max-width: 720px;
+        margin-top: 88px;
     }
 }
 
 @media screen and (max-width:1279px) and (min-width:1024px) {
     .photo-grid {
-        grid-template-columns: repeat(auto-fit, minmax(300px));
         max-width: 928px;
     }
 }
@@ -23,7 +22,6 @@
 @media screen and (max-width:767px) and (min-width:320px) {
     .photo-grid {
         gap: 12px 0;
-        grid-template-columns: repeat(auto-fit, minmax(288px));
         max-width: 288px;
         margin-top: 64px;
     }
