--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,23 +1,23 @@
-.places__image {
+.place__image {
     height: 460px;
     object-fit: cover;
     grid-area: image;
 }
 
 @media screen and (max-width:1279px) and (min-width:1024px) {
-    .places__image {
+    .place__image {
         height: 440px;
     }
 }
 
 @media screen and (max-width:1023px) and (min-width:768px) {
-    .places__image {
+    .place__image {
         height: 340px;
     }
 }
 
 @media screen and (max-width:767px) and (min-width:320px) {
-    .places__image {
+    .place__image {
         height: 320px;
     }
 }
