--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,21 +1,22 @@
-.places__title {
-    font-size: 54px;
-    line-height: 107%;
+.place__title {
+    font-size: 72px;
+    line-height: 106%;
     grid-area: title;
     margin: 0;
     font-weight: 900;
 }
 
 @media screen and (max-width:1023px) and (min-width:768px) {
-    .places__title {
+    .place__title {
         font-size: 42px;
+        line-height: 110%;
     }
 }
 
 @media screen and (max-width:767px) and (min-width:320px) {
-    .places__title {
+    .place__title {
         font-size: 32px;
         line-height: 109%;
-        margin: 50px 16px 0 16px;
+        margin: 0 16px;
     }
 }
