--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,4 +1,4 @@
-.places__website {
+.place__website {
     grid-area: website;
     display: flex;
     flex-direction: column;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width:767px) and (min-width:320px) {
-    .places__website {
+    .place__website {
         margin: 0 16px;
     }
 }
