--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,30 +1,41 @@
-.places__place {
+.place {
     display: grid;
     grid-template-areas: "title website " "image paragraph";
     gap: 48px 40px;
-    margin-bottom: 92px;
+    margin-bottom: 80px;
     grid-template-columns: 460px 484px;
 }
 
+.place:last-child {
+    margin-bottom: 0;
+}
+
 @media screen and (max-width:767px) and (min-width:320px) {
-    .places__place {
+    .place {
         grid-template-areas: "title" "website" "image" "paragraph";
         gap: 32px 0;
-        margin: 0 16px;
+        margin: 50px 16px 0 16px;
         grid-template-columns: 320px;
+    }
+    .place:first-child {
+        margin: 0 16px;
     }
 }
 
 @media screen and (max-width:1279px) and (min-width:1024px) {
-    .places__place {
+    .place {
         gap: 48px 32px;
         grid-template-columns: 440px 456px;
     }
 }
 
 @media screen and (max-width:1023px) and (min-width:768px) {
-    .places__place {
+    .place {
         gap: 48px 28px;
         grid-template-columns: 340px 352px;
+        margin: 73px 0 0 0;
+    }
+    .place:first-child {
+        margin: 0;
     }
 }
