--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,6 +3,7 @@
     display: flex;
     list-style: none;
     padding: 0;
+    column-gap: 19px;
 }
 
 @media screen and (max-width:767px) and (min-width:320px) {
